@@ -5,6 +5,8 @@ git-annex (10.20240431) UNRELEASED; urgency=medium
     (Based on Michael Hanke's git-remote-datalad-annex.)
   * initremote, enableremote: Added --with-url to enable using
     git-remote-annex.
+  * When building an adjusted unlocked branch, make pointer files
+    executable when the annex object file is executable.
   * fsck: Fix recent reversion that made it say it was checksumming files
     whose content is not present.
   * Avoid the --fast option preventing checksumming in some cases it
